[gd_scene load_steps=17 format=3 uid="uid://bdrjjp3800vqf"]

[ext_resource type="FontFile" uid="uid://d2yhtgocfkjse" path="res://assets/fonts/JetBrainsMono-Regular.woff2" id="1_ltiux"]
[ext_resource type="Script" path="res://MainUI.gd" id="1_qdrh0"]
[ext_resource type="Shader" path="res://assets/shaders/hackingaurora.gdshader" id="3_bmjad"]
[ext_resource type="Shader" path="res://assets/shaders/hackingroad.gdshader" id="3_gdkwv"]
[ext_resource type="Shader" path="res://assets/shaders/hackinghorizon.gdshader" id="3_mb33n"]

[sub_resource type="Theme" id="Theme_3ofuc"]
default_font = ExtResource("1_ltiux")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rbqmj"]
shader = ExtResource("3_bmjad")
shader_parameter/top_color = Color(0.1, 0, 0.2, 1)
shader_parameter/middle_color = Color(0.6, 0, 0.6, 0.8)
shader_parameter/aurora_intensity = 0.3
shader_parameter/aurora_speed = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n1bxt"]
shader = ExtResource("3_gdkwv")
shader_parameter/grid_color = Color(1, 0.2, 0.8, 1)
shader_parameter/background_color = Color(0.05, 0, 0.1, 1)
shader_parameter/glow_intensity = 0.4
shader_parameter/ease_strength = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bnux0"]
shader = ExtResource("3_mb33n")
shader_parameter/line_color = Color(0, 0.8, 0.76, 1)
shader_parameter/bottom_glow_color = Color(1, 0.27, 1, 1)
shader_parameter/line_thickness = 0.005
shader_parameter/line_position = 0.5
shader_parameter/glow_strength = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oas22"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4553"]
bg_color = Color(0.27451, 0.929412, 0.996078, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axpsd"]
bg_color = Color(0.28, 0.796, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rci3a"]
bg_color = Color(0, 0.545098, 0.960784, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2uwj"]
bg_color = Color(1, 0.54902, 0.792157, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xv8rj"]
bg_color = Color(1, 0.247059, 0.654902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enl84"]
bg_color = Color(0.960784, 0, 0.470588, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_3ofuc")
script = ExtResource("1_qdrh0")

[node name="SynthAurora" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_rbqmj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SynthRoad" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_n1bxt")
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 0

[node name="SynthHorizon" type="ColorRect" parent="SynthRoad"]
material = SubResource("ShaderMaterial_bnux0")
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.227451, 0.00392157, 0.305882, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
clip_contents = true
layout_mode = 2

[node name="LabelHackingTime" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "It's time to hack time!"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ButtonAddTask" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.0156863, 0.172549, 0.466667, 1)
theme_override_colors/font_pressed_color = Color(0.0156863, 0.172549, 0.466667, 1)
theme_override_colors/font_focus_color = Color(0.0156863, 0.172549, 0.466667, 1)
theme_override_colors/font_color = Color(0.0174471, 0.172858, 0.46525, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_oas22")
theme_override_styles/hover = SubResource("StyleBoxFlat_o4553")
theme_override_styles/pressed = SubResource("StyleBoxFlat_axpsd")
theme_override_styles/normal = SubResource("StyleBoxFlat_rci3a")
text = " Add Task "

[node name="ButtonResetAll" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.301961, 0, 0.298039, 1)
theme_override_colors/font_pressed_color = Color(0.301961, 0, 0.298039, 1)
theme_override_colors/font_focus_color = Color(0.301961, 0, 0.298039, 1)
theme_override_colors/font_color = Color(0.301961, 0, 0.298039, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_oas22")
theme_override_styles/hover = SubResource("StyleBoxFlat_u2uwj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xv8rj")
theme_override_styles/normal = SubResource("StyleBoxFlat_enl84")
text = " Reset All "

[node name="LabelTotalTime" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
horizontal_alignment = 1
